提交第二个版本，新增ip配置和登录界面优化

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
 
     <string name="hit_account">请输入用户名</string>
     <string name="hit_pwd">请输入密码</string>
+    <string name="input_server_ip_address">请输入服务访问地址</string>
 
 </resources>
